<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".frameworks.AddAutoFragment"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_auto"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/id_add_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:hintTextColor = "@color/black"
            app:boxStrokeColor="@color/red"
            app:cursorColor="@color/red"
            android:hint="@string/marka">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSelectHandle="@drawable/custom_cursor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_drive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            app:hintTextColor = "@color/black"
            app:boxStrokeColor="@color/red"
            app:cursorColor="@color/red"
            android:hint="@string/drive">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSelectHandle="@drawable/custom_cursor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            app:hintTextColor = "@color/black"
            app:boxStrokeColor="@color/red"
            app:cursorColor="@color/red"
            android:hint="@string/color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSelectHandle="@drawable/custom_cursor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            app:hintTextColor = "@color/black"
            app:boxStrokeColor="@color/red"
            app:cursorColor="@color/red"
            android:hint="@string/body">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSelectHandle="@drawable/custom_cursor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="@string/add"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/red"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:padding="5dp"
        android:layout_gravity="end"
        android:src="@drawable/close"
        app:tint = "@color/red"
        android:importantForAccessibility="no" />
</FrameLayout>